appId: com.mf.example.host
---
- launchApp:
    clearState: true
- waitForAnimationToEnd

# Check Host Info
- assertVisible:
    id: 'host-app-info'
- copyTextFrom:
    id: 'host-lodash'
- assertTrue:
    condition: ${maestro.copiedText === "4.18.1"}

# Check Mini App Info
- assertNotVisible:
    id: 'mini-info'
- assertVisible:
    id: 'load-mini-button'
- retry:
    maxRetries: 2
    commands:
      - tapOn:
          id: 'load-mini-button'
          retryTapIfNoChange: true
      - assertVisible:
          id: 'mini-info'
- copyTextFrom:
    id: 'mini-lodash'
- assertTrue:
    condition: ${maestro.copiedText === "4.18.1"}

# Check Nested Mini App Info
- assertVisible:
    id: 'nested-mini-info'
- copyTextFrom:
    id: 'nested-mini-lodash'
- assertTrue:
    condition: ${maestro.copiedText === "4.18.1"}
